# PyQt5

./: README.md  pg001.py  pyproject.toml  requirements.txt
tools/: mypy.ini  pylintrc
